--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,11 +24,11 @@ html {
 }
 
 .home-content {
-  @apply flex-1 xl:justify-center justify-start flex flex-col gap-10;
+  @apply flex-1 xl:justify-center justify-start flex flex-col md:gap-10 gap-4;
 }
 
 .head-text {
-  @apply xl:text-[10rem] text-[6rem] xl:leading-[11rem] leading-[7rem] font-black text-black;
+  @apply xl:text-[10rem] md:text-[6rem] text-[3rem] xl:leading-[11rem] md:leading-[7rem] leading-[5rem] font-black text-black;
 }
 
 .download-btn {
